--- a/index.html
+++ b/index.html
@@ -299,15 +299,15 @@ In our department, we have a significant number of registered students, and the 
                     </div>
                     <div class="person-info">
                         <p>
-                            <strong>Name:</strong><br> Ed<br>
-                            <strong>Email:</strong> Ed@ttu.edu<br>
+                            <strong>Name:</strong><br>Eduardo Gonzalez<br>
+                            <strong>Email:</strong> edgzz.gonzalez@ttu.edu<br>
                             <strong>Position:</strong><br> Full Stack Developer
                         </p>
                     </div>
                     <div class="person-info">
                         <p>
-                            <strong>Name:</strong><br> Jared<br>
-                            <strong>Email:</strong> Jared@ttu.edu<br>
+                            <strong>Name:</strong><br> Jared King<br>
+                            <strong>Email:</strong> jaredkin@ttu.edu<br>
                             <strong>Position:</strong><br> Full Stack Developer
                         </p>
                     </div>
