--- a/index.html
+++ b/index.html
@@ -270,6 +270,46 @@ In our department, we have a significant number of registered students, and the 
                     Location: Online (Discord)<br>
                     What we did: Presentation practice and error checking..<br>
                 </p>
+                <p class="meeting-entry">
+                    Date: 10/02/2023<br>
+                    Location: In person (CS Building)<br>
+                    What we did:  Started setting up GitHub npm and angular cli on personal dev environments.<br>
+                </p>
+                <p class="meeting-entry">
+                    Date: 10/04/2023<br>
+                    Location: In person (Library)<br>
+                    What we did: learned about source control and created our basic angular app.<br>
+                </p>
+                <p class="meeting-entry">
+                    Date: 10/06/2023<br>
+                    Location: In person (Library)<br>
+                    What we did:  Started working on website components such as calendar and dropdown menu.<br>
+                </p>
+                  <p class="meeting-entry">
+                    Date: 10/09/2023<br>
+                    Location: In person (CS Building)<br>
+                    What we did: Started working on basic page designs for stage 2 documentation.<br>
+                </p>
+                 <p class="meeting-entry">
+                    Date: 10/0/2023<br>
+                    Location: In person (CS Building)<br>
+                    What we did: Started working on basic page designs for stage 2 documentation.<br>
+                </p>
+                 <p class="meeting-entry">
+                    Date: 10/09/2023<br>
+                    Location: In person (CS Building)<br>
+                    What we did: Started working on basic page designs for stage 2 documentation.<br>
+                </p>
+                 <p class="meeting-entry">
+                    Date: 10/09/2023<br>
+                    Location: In person (CS Building)<br>
+                    What we did: Started working on basic page designs for stage 2 documentation.<br>
+                </p>
+                 <p class="meeting-entry">
+                    Date: 10/09/2023<br>
+                    Location: In person (CS Building)<br>
+                    What we did: Started working on basic page designs for stage 2 documentation.<br>
+                </p>
             </div>
 
             <div class="banner" id="visuals">
@@ -294,21 +334,21 @@ In our department, we have a significant number of registered students, and the 
                         <p>
                             <strong>Name:</strong><br> Daniel Diaz<br>
                             <strong>Email:</strong> dia36200@ttu.edu<br>
-                            <strong>Position:</strong><br> Full Stack Developer
+                            <strong>Position:</strong><br> Back-End Developer
                         </p>
                     </div>
                     <div class="person-info">
                         <p>
                             <strong>Name:</strong><br>Eduardo Gonzalez<br>
                             <strong>Email:</strong> edgzz.gonzalez@ttu.edu<br>
-                            <strong>Position:</strong><br> Full Stack Developer
+                            <strong>Position:</strong><br> Front-End Developer
                         </p>
                     </div>
                     <div class="person-info">
                         <p>
                             <strong>Name:</strong><br> Jared King<br>
                             <strong>Email:</strong> jaredkin@ttu.edu<br>
-                            <strong>Position:</strong><br> Full Stack Developer
+                            <strong>Position:</strong><br> Front-End Developer
                         </p>
                     </div>
                 </div>
