updated site meetings

--- a/index.html
+++ b/index.html
@@ -335,24 +335,59 @@ In our department, we have a significant number of registered students, and the 
                     What we did: Started working on basic page designs for stage 2 documentation.<br>
                 </p>
                  <p class="meeting-entry">
-                    Date: 10/0/2023<br>
-                    Location: In person (CS Building)<br>
-                    What we did: Started working on basic page designs for stage 2 documentation.<br>
+                    Date: 10/11/2023<br>
+                    Location: In person (Library)<br>
+                    What we did:  Started working on basic class, sequence, and use-case diagrams stage 2 documentation.<br>
                 </p>
                  <p class="meeting-entry">
-                    Date: 10/09/2023<br>
-                    Location: In person (CS Building)<br>
-                    What we did: Started working on basic page designs for stage 2 documentation.<br>
+                    Date: 10/16/2023<br>
+                    Location: In person (Library)<br>
+                    What we did: Made progress to sequence diagrams for stage 2 and components.<br>
                 </p>
                  <p class="meeting-entry">
-                    Date: 10/09/2023<br>
-                    Location: In person (CS Building)<br>
-                    What we did: Started working on basic page designs for stage 2 documentation.<br>
+                    Date: 10/18/2023<br>
+                    Location:  In person (Library)<br>
+                    What we did: Made progress to all diagrams for stage 2 documentation.<br>
                 </p>
                  <p class="meeting-entry">
-                    Date: 10/09/2023<br>
+                    Date: 10/19/2023<br>
+                    Location: In person (Library)<br>
+                    What we did: Made progress to low-fidelity diagrams and started low-fidelity mock-up visuals for stage 2.<br>
+                </p>
+                <p class="meeting-entry">
+                    Date: 10/23/2023<br>
+                    Location: In person (Library)<br>
+                    What we did: Worked on low-fidelity diagrams and mock-up visuals for stage 2.<br>
+                </p>
+                <p class="meeting-entry">
+                    Date: 10/25/2023<br>
+                    Location: In person (Library)<br>
+                    What we did: Started presentation, completed low-fidelity diagrams, and updated documentation for stage 2.<br>
+                </p>
+                <p class="meeting-entry">
+                    Date: 10/27/2023<br>
+                    Location: In person (Library)<br>
+                    What we did: Started implementation plan, completed low-fidelity mock-up visuals, and updated documentation and presentation for stage 2.<br>
+                </p>
+                <p class="meeting-entry">
+                    Date: 10/28/2023<br>
+                    Location: Online (Discord)<br>
+                    What we did: Updated all diagrams, mock-up visuals, implementation plan, documentation, and presentation for new actor: Student as per Professor Dang's request.<br>
+                </p>
+                <p class="meeting-entry">
+                    Date: 10/29/2023<br>
+                    Location: Online (Discord)<br>
+                    What we did: Completed last-minute details of stage 2 documentation and presentation.<br>
+                </p>
+                <p class="meeting-entry">
+                    Date: 10/31/2023<br>
                     Location: In person (CS Building)<br>
-                    What we did: Started working on basic page designs for stage 2 documentation.<br>
+                    What we did: Corrected mistakes for stage 2 documentation.<br>
+                </p>
+                <p class="meeting-entry">
+                    Date: 11/03/2023<br>
+                    Location: In-person (Library)<br>
+                    What we did: Updated group website with current general project information.<br>
                 </p>
             </div>
 
