--- a/index.html
+++ b/index.html
@@ -389,6 +389,31 @@ In our department, we have a significant number of registered students, and the 
                     Location: In-person (Library)<br>
                     What we did: Updated group website with current general project information.<br>
                 </p>
+                 <p class="meeting-entry">
+                    Date: 11/06/2023<br>
+                    Location: In-person (Library)<br>
+                    What we did: Initiated Frontend and Backend development.<br>
+                </p>
+                 <p class="meeting-entry">
+                    Date: 11/08/2023<br>
+                    Location: In-person (Library)<br>
+                    What we did: Continue with development, Database successfully created.<br>
+                </p>
+                 <p class="meeting-entry">
+                    Date: 11/10/2023<br>
+                    Location: In-person (Library)<br>
+                    What we did: The authentification system page was finalized, and the Appointment API was implemented.<br>
+                </p>
+                 <p class="meeting-entry">
+                    Date: 11/13/2023<br>
+                    Location: In-person (Library)<br>
+                    What we did: Dashboard development started, appointment system was revisited.<br>
+                </p>
+                 <p class="meeting-entry">
+                    Date: 11/15/2023<br>
+                    Location: In-person (Library)<br>
+                    What we did: Connected the backend with Database, the connection of the frontend with the backend started .<br>
+                </p>
             </div>
 
             <div class="banner" id="visuals">
