--- a/index.html
+++ b/index.html
@@ -429,6 +429,52 @@ In our department, we have a significant number of registered students, and the 
                     Location: In-person (Library)<br>
                     What we did: Connected the backend with frontend successfully, and registration and login authentification implementations were completed .<br>
                 </p>
+                  <p class="meeting-entry">
+                    Date: 11/22/2023<br>
+                    Location: Online (Discord)<br>
+                    What we did: Continue working in fucntionalities, discarded Chat feature from plans .<br>
+                </p>
+                  <p class="meeting-entry">
+                    Date: 11/23/2023<br>
+                    Location: Online (Discord)<br>
+                    What we did: Continued working on page design and debugging database .<br>
+                </p>
+                  <p class="meeting-entry">
+                    Date: 11/24/2023<br>
+                    Location: Online (Discord)<br>
+                    What we did: Stress testing functionalities, found multiple errors and started patching them .<br>
+                </p>
+                  <p class="meeting-entry">
+                    Date: 11/25/2023<br>
+                    Location: Online (Discord)<br>
+                    What we did: Started to focus on design and add small tools for both sides .<br>
+                </p>
+                       <p class="meeting-entry">
+                    Date: 11/27/2023<br>
+                    Location: In-person (Library)<br>
+                    What we did: Cleaning code and continue designing frontend .<br>
+                </p>
+                       <p class="meeting-entry">
+                    Date: 11/29/2023<br>
+                    Location: In-person (Library)<br>
+                    What we did: Swifted half of the team towards documentation, the other half continued working in small bugs or design redundancies .<br>
+                </p>
+                       <p class="meeting-entry">
+                    Date: 11/30/2023<br>
+                    Location: In-person (Library)<br>
+                    What we did: Connected the backend with frontend successfully, and registration and login authentification implementations were completed .<br>
+                </p>
+                       <p class="meeting-entry">
+                    Date: 12/03/2023<br>
+                    Location: In-person (Library)<br>
+                    What we did: Practiced presentation and prepared data and demo that will be presented, Jared got sick, we are not sure if he can join us in the presentation .<br>
+                </p>
+                       <p class="meeting-entry">
+                    Date: 12/4/2023<br>
+                    Location: In-person (Library)<br>
+                    What we did: Last rehersal before presentation, We can do this boys!  .<br>
+                </p>
+                
             </div>
 
             <div class="banner" id="visuals">
